--- a/client/styles/styles.styl
+++ b/client/styles/styles.styl
@@ -1,17 +1,17 @@
+@import '_header'
 @import '_buttons'
 
 html, body
   margin 0
   padding 0
   width 100%
-  overflow hidden
   height 100%
 
 body
   font-family Helvetica, Arial, Verdana, sans-serif
   font-size 16px
   color #000
-  background #fff
+  background #fdfdfd
 
 h1
 h2
@@ -63,6 +63,7 @@ h2
   width 90%
 
 input[type="text"]
+input[type="password"]
   -webkit-appearance none
   padding 10px 10px
   font-size 16px
