--- a/client/views/index.jade
+++ b/client/views/index.jade
@@ -8,6 +8,9 @@ html(lang="en", ng-app='basket')
     link(rel='stylesheet' href='css/font-awesome.min.css' media='screen')
     link(rel='stylesheet' href='css/styles.css' media='screen')
   body
+    header.header
+      .logo
+        span B
     .container(ng-view)
 
     script(type='text/javascript' src='js/bundle.js')
