--- a/client/styles/_buttons.styl
+++ b/client/styles/_buttons.styl
@@ -2,13 +2,83 @@
 /* Buttons */
 
 .btn
-  border 1px solid #ccc
+  font-size 16px
+  background none
+  border 0
   padding 5px 10px
   cursor pointer
   display inline-block
   vertical-align top
+  position relative
+  font-weight 100 !important
+  font-family Helvetica, Arial, Verdana, sans-serif
+  &:disabled
+    background #ccc !important
 
 .btn-block 
   display block
 
+.btn-add-item
+  width 100%
+  background #f7f7f7
+  border 2px dashed #ccc
+  padding 25px
+  color #ccc
+  border-radius 5px
+
+.btn-add-comment
+  background basket-green
+  color #fff
+  width 90%
+  padding 15px
+
+.btn-delete
+.btn-info
+  &::after
+    display none
+    background #525252
+    color #fff
+    padding 5px
+    content ''
+    position absolute
+    right -50px
+    top 50%
+    pointer-events none
+    transform translateY(-50%)
+    font-size 16px
+    z-index 2
+  &:hover
+    &::after
+      display block
+
+.btn-delete
+  color #525252
+  font-size 25px
+  &::after
+    content 'delete'
+
+.btn-info
+  &::after
+    content 'edit'
+    right -35px
+
+.btn-assign
+  border-radius 5px
+  &:hover
+    background #daddec
+    color basket-blue
+.assigned
+  background basket-blue
+  color #fff
+
+.comment-notification
+  display block
+  content ''
+  position absolute
+  background basket-red
+  width 10px
+  height 10px
+  border-radius 50%
+  top 7px
+  left 7px
 /* Messages */
