--- a/client/styles/styles.styl
+++ b/client/styles/styles.styl
@@ -1,5 +1,6 @@
-@import '_header'
+@import '_vars'
 @import '_buttons'
+@import '_header'
 
 html, body
   margin 0
@@ -10,17 +11,40 @@ html, body
 body
   font-family Helvetica, Arial, Verdana, sans-serif
   font-size 16px
-  color #000
+  color basket-blue
   background #fdfdfd
+  font-weight 100
 
 h1
 h2
   margin 0
   padding 0
-
+  font-weight 100
+  margin-bottom 15px
 *
   box-sizing border-box
-  user-select none
+
+.inline-block
+  display inline-block
+  position relative
+
+.va-middle
+  vertical-align middle
+
+.ta-right
+  text-align right
+
+.ta-center
+  text-align center
+
+.margin-right-5
+  margin-right 5px
+
+.bold
+  font-weight 600
+
+.normal
+  font-weight 200 !important
 
 .col
 .col-10
@@ -38,6 +62,7 @@ h2
   width 100%
   vertical-align top
   white-space normal
+  position relative
 
 .col-10
   width 10%
@@ -62,24 +87,44 @@ h2
 .col-90
   width 90%
 
+
+textarea
+  font-family Helvetica, Arial, Verdana, sans-serif
+  font-size 16px
+  font-weight 100
+  color basket-blue
+  &:focus
+    outline none
+
 input[type="text"]
 input[type="password"]
   -webkit-appearance none
-  padding 10px 10px
-  font-size 16px
-  margin 0
-  border 1px solid #ccc
+  background none
+  padding 10px 10px 10px 0
+  font-family Helvetica, Arial, Verdana, sans-serif !important
+  font-size 30px
+  margin 0 0 10px
+  border 0
+  width 100%
+  font-weight 100 !important
+  color basket-blue
+  border-bottom 1px solid #daddec
   &:focus
     outline none
-    border 1px solid #adadad
-    &::-webkit-input-placeholder
-        color transparent !important
-    &::-moz-input-placeholder
-        color transparent !important
-    &::-ms-input-placeholder
-        color transparent !important
-    &::input-placeholder
-        color transparent !important
+  &::-webkit-input-placeholder
+    color #daddec !important
+  &::-moz-input-placeholder
+    color #daddec !important
+  &::-ms-input-placeholder
+    color #daddec !important
+  &::input-placeholder
+    color #daddec !important
+  &.single-item-input
+    padding 26px 15px
+    border 0
+  &.line-through
+    text-decoration line-through
+    font-weight 100 !important
 
 .red
   color #ef3434
@@ -87,6 +132,9 @@ input[type="password"]
 .green
   color #A6CF57
   text-shadow 0px 1px 0px #799b36
+
+.small
+  font-size 12px
 
 .relative
   position relative
@@ -106,10 +154,14 @@ input[type="password"]
   right 0
   position absolute
 
+.top
+  top 0
+
 .container
   width 100%
   height 100%
   position relative
+  padding 90px 16% 0 15px
 
 .page-container
   position relative
@@ -142,27 +194,230 @@ input[type="password"]
   .page-3
     top -100%
 
-.checkbox
-  width 25px
-  height 25px
-  cursor pointer
-  z-index 100
-  opacity 0
-  position absolute
+
+input[type="checkbox"]
+    opacity 0
+    margin 0 auto
+    width 90px
+    height 90px
+    position relative
+    cursor pointer
+    margin-right 15px
+    &:hover
+      + .custom-checkbox
+        background #daddec !important
 
 .custom-checkbox
-  width 25px
-  height 25px
-  display inline-block
-  border 1px solid #ccc
+    display inline-block
+    width 90px
+    height 90px
+    visibility visible
+    border 3px solid #daddec
+    pointer-events none
+    position absolute
+    left 0
+    top 0
+    text-align center
+    i
+      color #fff
+      transform translateY(-50%)
+      top 50%
+      position relative
+      z-index 11
+      font-size 55px
+    &:after
+        display block
+        content ''
+        background basket-blue
+        width 90px
+        height 90px
+        position absolute
+        top -3px
+        left -3px
+        z-index 10
+        visibility hidden
+        transition all 150ms ease-in-out
+        transform scale(0)
+
+input[type=checkbox]:checked + .custom-checkbox:after
+    visibility visible
+    transform scale(1)
+    pointer-events none
+
+.checked-list
+  margin-top 25px
+  background #f5f5f5
+  border-top 2px dashed #d7dae7
+
+.list-item
+  position relative
+  padding 25px 0
+
+.list-item-buttons
   position absolute
-  &.checked
+  right 0
+  display inline-block
+  color #525252
+  a
+    font-size 25px
+
+.comment-count
+  font-size 12px
+  position absolute
+  left 0
+  right 0
+  margin 0 auto
+  text-align center
+  top 50%
+  transform translateY(-50%)
+
+.sidebar
+  position fixed
+  right -170px
+  height 100%
+  padding-top 90px
+  border-left 2px solid #eaebee
+  width 250px
+  background #f9f9f9
+  z-index 2
+
+.profile
+.sidebar-navigation
+  width 100%
+
+.sidebar-navigation-item
+  padding 15px
+  cursor pointer
+  position relative
+  &:hover
+    background #eaebee
+
+.sidebar
+  .profile
+    padding 15px 15px 50px
+
+.profile-image
+.profile-name
+.sidebar-navigation-item-icon
+.sidebar-navigation-item-text
+  display inline-block
+  vertical-align middle
+
+.profile-image
+.sidebar-navigation-item-icon
+  background basket-blue
+  width 50px  
+  height 50px  
+  border-radius 50%
+  color #fff
+  text-align center
+  font-size 25px
+  margin-right 15px
+  i
+    top 50%
+    transform translateY(-50%)
+    position relative
+
+section
+  padding-top 25px
+  margin-top 25px
+  margin-bottom 25px
+  border-top 1px solid #daddec
+
+.comment
+  width 80%
+  max-width 850px
+  margin-bottom 35px
+  position relative
+.comment-user
+  vertical-align top
+  width 45px
+  position absolute
+  left 0
+  .profile-name
+    margin-top 5px
+    display block
+  &.new-comment-user
+    left auto
+    position absolute
+    margin-left 5px
+    display inline-block
+.comment-text
+  vertical-align top
+  display inline-block
+  width 90%
+  position relative
+  left 75px
+  border 2px solid #daddec
+  padding 25px
+  &::after
+  &::before
+    display block
+    position absolute
+    content ''
+    top -2px
+    left -25px
+    border-left 25px solid transparent
+    border-top 25px solid #daddec 
+    border-bottom 25px solid transparent
+  &::before
+    top 0
+    left -20px
+    border-left 22px solid transparent
+    border-top 22px solid #fdfdfd 
+    border-bottom 22px solid transparent
+    z-index 100
+  &.new-comment
+    top 100%
+    padding 0
+    position relative
+    right auto
+    margin-left 0
+    left 0
+    margin-right 15px
+    textarea
+      border 0
+      resize vertical
+      margin 0
+      padding 25px
+      width 100%
+      height 100%
     &::after
+    &::before
       display block
       position absolute
       content ''
-      background #A6CF57
-      width 15px
-      height 15px
-      top 4px
-      left 4px
+      top -2px
+      left auto
+      right -25px
+      border-left 0
+      border-right 25px solid transparent
+      border-top 25px solid #daddec 
+      border-bottom 25px solid transparent
+    &::before
+      top 0
+      right -20px
+      border-right 22px solid transparent
+      border-top 22px solid #fdfdfd 
+      border-bottom 22px solid transparent
+      z-index 100
+.comment-timestamp
+  position absolute
+  right 0
+  top 100%
+  padding-top 10px
+
+.light-green-block
+  background basket-light-green
+
+.light-blue-block
+  background basket-light-blue
+
+.orange-block
+  background basket-orange
+
+@media screen and (min-width 1024px) 
+  .sidebar
+    right 0
+    width 15%
+
