--- a/client/styles/_header.styl
+++ b/client/styles/_header.styl
@@ -1,10 +1,10 @@
 .header
   background #fff
   border-bottom 2px solid #ebebee
-  height 75px
+  height 55px
   width 100%
   position fixed
-  z-index 100
+  z-index 11
 
 .header-logo
   background basket-blue
@@ -18,15 +18,16 @@
   font-weight 600
   content 'B'
   text-align center
-  font-size 30px
+  font-size 40px
   margin-left 15px
   span
-    top 25%
-    transform translateY(-25%)
+    top 0%
+    transform translateY(-0%)
     position relative
 
 .header-button-wrapper
-  width 100%
+  left 0
+  right 0
   text-align center
   position fixed
   top 0
@@ -37,7 +38,15 @@
   background #a3dd19
   color #fff
   border 0
-  padding 28px 25px
+  padding 18px 25px
   z-index 9999
   &:hover
     background #90c610
+
+.header-menu-button
+  position absolute
+  height 100%
+  top 0
+  right 0
+  padding 0 15px
+
