--- a/client/views/index.jade
+++ b/client/views/index.jade
@@ -4,7 +4,7 @@ html(lang="en", ng-app='basket')
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible' content='IE-edge')
     meta(name='viewport' content='width=device-width, initial-scale=1, user-scalable=no')
-    title Vikings of Code - project template
+    title Basket - the superior grocery list application
     link(rel='stylesheet' href='css/font-awesome.min.css' media='screen')
     link(rel='stylesheet' href='css/styles.css' media='screen')
   body
